--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Responsive Cake webpage</title>
-    <!-- Add a link to your css file here -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 </head>
 
 <body>
-    <!-- Add your markup here -->
+   
+<!-- Image and text -->
+<header class="container display-flex justify-spacer-around">
+  
+  <div class="row">
+    <div class="col display-flex">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAPeZokJLOdNQxprgmLa3am7Icz4vAK0ZELw&usqp=CAU" alt="" width="80" height="80" class="d-inline-block align-top">
+    </div>
+    <div class="col display-flex">
+      <p class="align-items-flex-end display-flex"> best cakes in town <BR>delivered to your door </p>
+      <p class="fas fa-align-justify right"></p>
+    </div>
+
+    </header>
+
+
+
+
+
 </body>
+
+
 
 </html>
